# ProcessorPerformanceVisualization

./: CMakeLists.txt  README.md  qt_designer_path.txt
files/: setup.txt  statistic.txt
main/: main.cpp  mainwindow.h  mainwindow.ui
main/forms/: chipwindow.cpp  chipwindow.h  chipwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
main/src/components/: ClickableItems.cpp  ClickableItems.h
main/src/graphics/: ChipRenderer.cpp  ChipRenderer.h
main/src/statistics/: ComponentStats.h  StatsDisplayer.cpp  StatsDisplayer.h  StatsDisplayer2.cpp  StatsLoader.cpp  StatsLoader.h
main/src/ui/: ChipWindow.cpp  ChipWindow.h  DataVisualizer.cpp  DataVisualizer.h
